Update Blog “2024-07-24-ddd”

--- a/content/blog/2024-07-24-ddd.md
+++ b/content/blog/2024-07-24-ddd.md
@@ -3,8 +3,8 @@ title: ddd
 date: 2024-07-24T23:33:35.033Z
 description: dddddddddddd
 categories:
-  - ddddddddddddddddd
+  - tryhackme
 tags:
-  - ddddddddddddddddddd
+  - skill
 ---
 d﻿ddddddddddddddddddd
